--- a/report/625-finalreport-G6.Rmd
+++ b/report/625-finalreport-G6.Rmd
@@ -57,7 +57,7 @@ Therefore, we opted to use the University of Michigan Biostatistics Cluster for 
 
 ### Statistical Results
 
-Based on the predictive analysis on the test set (n = ), we found that Naive Bayes performed the best in terms of Recall and Logistic Regression with Intercept performed the best in terms of Precision. However, since F1 Score is the harmonic mean between recall and precision, we use it to identify SVM as our "best"" performing model. SVM had the highest accuracy scores in terms of the F1 Score. Logitic Regression with and without Intercept had very similar scores. The Naive Bayes Classifier performed the worst, however, it is our baseline model and we expected it to perform poorly due to its underlying assumptions about independence of its covariates (see Citation). As for computational time, the Logistic Regression models (```glmnet```) were trained the fastest whereas Naive Bayes and SVM took a much longer time (```e1071)```. These times were calculated from the cluster jobs. The results are summarized in the following table.
+Based on the predictive analysis on the test set (n = ), we found that Naive Bayes performed the best in terms of Recall and Logistic Regression with Intercept performed the best in terms of Precision. However, since F1 Score is the harmonic mean between recall and precision, we use it to identify SVM as our "best" performing model. SVM had the highest accuracy scores in terms of the F1 Score. Logitic Regression with and without Intercept had very similar scores. The Naive Bayes Classifier performed the worst, however, it is our baseline model and we expected it to perform poorly due to its underlying assumptions about independence of its covariates (see Citation). As for computational time, the Logistic Regression models (```glmnet```) were trained the fastest whereas Naive Bayes and SVM took a much longer time (```e1071)```. These times were calculated from the cluster jobs. The results are summarized in the following table.
 
 ```{r, echo = FALSE}
 results_table <- 
